fix: align about title

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  display: flex;
   padding: 2rem;
   font-family: "Roboto", monospace;
   color: #fcde93;
@@ -14,6 +13,7 @@ body {
 }
 
 .container {
+  display: flex;
   flex-direction: column;
 }
 
@@ -25,21 +25,23 @@ body {
   }
 }
 
-.about {
-  background-color: rgba(152, 104, 211, 0.773);
+.about-image {
   height: 19.5rem;
   width: 17rem;
   padding: 1rem 0;
   border-radius: 100%;
   text-align: -webkit-center;
-
-  @media (max-width: 768px) {
-    align-self: center;
-  }
+  background-color: rgba(152, 104, 211, 0.773);
 }
 
 .image {
   border-radius: 45%;
+}
+
+.about-wrapper {
+  @media (max-width: 768px) {
+    align-self: center;
+  }
 }
 
 .about-me-description {
